Fix #179 Profile picture editing changes
* Add background to image when on white page background. The default user image is transparent so was not visible
* Update styles and layout of editing profile image experience

--- a/src/app/shared/img-croppie/img-croppie.component.scss
+++ b/src/app/shared/img-croppie/img-croppie.component.scss
@@ -16,25 +16,15 @@ limitations under the License.
 
 SPDX-License-Identifier: Apache-2.0
 */
-import { Component, Output, EventEmitter } from '@angular/core';
-import { ImageCroppedEvent } from 'ngx-image-cropper';
 
-@Component({
-  selector: 'mdm-img-croppie',
-  templateUrl: './img-croppie.component.html',
-  styleUrls: ['./img-croppie.component.scss']
-})
-export class ImgCroppieComponent {
-  @Output() cropImage: EventEmitter<any> = new EventEmitter();
-  public imageBase64 = '';
-  imageChangedEvent: any = '';
-  croppedImage: any = '';
+.mdm-img-croppie {
+  h5 {
+    margin: 4px 0px;
+  }
 
-  constructor() {}
-
-
-  imageCropped(event: ImageCroppedEvent) {
-    this.imageBase64 = event.base64;
-    this.cropImage.emit(event.base64);
+  &__preview {
+    img {
+      width: 256px;
+    }
   }
 }
